Permetre l'accés de lectura a tots els usuaris a App, Entorn i EntornApp. Censurar camps sensibles de EntornApp si s'accedeix sense el rol requerit